--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "expo": "~52.0.31",
     "expo-font": "~13.0.3",
+    "expo-location": "~18.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-icons": "^5.4.0",
