--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~13.0.3",
     "expo-location": "~18.0.6",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.4.0",
     "react": "18.3.1",
     "react-icons": "^5.4.0",
     "react-native": "0.76.7",
