--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "expo": "~52.0.31",
     "expo-font": "~13.0.3",
+    "expo-image-picker": "~16.0.6",
     "expo-location": "~18.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.4.0",
