--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.31",
     "expo-font": "~13.0.3",
     "expo-image-picker": "~16.0.6",
@@ -28,6 +29,7 @@
     "react": "18.3.1",
     "react-icons": "^5.4.0",
     "react-native": "0.76.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
@@ -41,6 +43,7 @@
     "@babel/core": "^7.25.2",
     "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
